<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actvity.DetailActivity">

    <TextView
        android:id="@+id/firstNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_first_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lastNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_last_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/telTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_tel"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_email"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_description"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_edit" />

        <Button
            android:id="@+id/delBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete" />

    </LinearLayout>

</LinearLayout>